[metadata]
name = filedate-histogram
version = 0.8.0
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
url = https://github.com/scivision/filedate-histogram
description = Plot histogram of file dates
keywords =
  file metadata
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: End Users
  Operating System :: OS Independent
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Scientific/Engineering :: Visualization
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
include_package_data = True
packages = find:
install_requires =
  pandas
  matplotlib

[options.extras_require]
tests =
  pytest
cov =
  flake8
  mypy
