[metadata]
name = filedate-histogram
version = 1.1.0
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
url = https://github.com/scivision/filedate-histogram
description = retrieve file modification dates and plot histogram
keywords =
  file metadata
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: End Users
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Topic :: Scientific/Engineering :: Visualization
  Topic :: Software Development :: Version Control :: Git
  Topic :: System :: Filesystems
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
include_package_data = True
packages = find:
install_requires =
  pyyaml

[options.extras_require]
tests =
  pytest
lint =
  flake8
  mypy
plot =
  pandas
  matplotlib
